--- a/inheritance.ipynb
+++ b/inheritance.ipynb
@@ -65,10 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1e-11"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval(\"1e-11\")"
+   ]
   },
   {
    "cell_type": "code",
