1. 確認可以在 building_Net() 內建立並覆寫 class 2. 新增 dataShape, inputDimension, neuroNode, outputDimension 等ModelParameter 屬性 3. 把 net 的輸入參數全都當作 kwargs 傳入

--- a/test.ipynb
+++ b/test.ipynb
@@ -21,6 +21,81 @@
     "resp = requests.post(url=url, files=file) \n",
     "print(resp.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_net(**model_params):\n",
+    "\n",
+    "    class MyNet():\n",
+    "        def __init__(self, **model_params):\n",
+    "            \n",
+    "            self.model_params = model_params\n",
+    "\n",
+    "        def check(self, num):\n",
+    "            print(num)\n",
+    "\n",
+    "    # net = MyNet(**model_params)\n",
+    "\n",
+    "    class MyNet2(MyNet):\n",
+    "        def __init__(self, **model_params):\n",
+    "            super().__init__(**model_params)\n",
+    "\n",
+    "        def check(self, num):\n",
+    "            print(num+123)\n",
+    "\n",
+    "\n",
+    "    net = MyNet2(**model_params)\n",
+    "\n",
+    "    return net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "246\n",
+      "None\n",
+      "{'a': 123, 'b': 456, 'c': 789}\n"
+     ]
+    }
+   ],
+   "source": [
+    "net = build_net(a=123, b=456, c=789)\n",
+    "print(net.check(123))\n",
+    "print(net.model_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(34, 7)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "\n",
+    "a = pd.read_csv(\"C:\\\\Users\\\\user\\\\rams\\\\projcet\\\\upload_data\\\\hospice\\\\X_case_104to108_34.csv\")\n",
+    "a.shape"
+   ]
   }
  ],
  "metadata": {
@@ -44,7 +119,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "383581dc0f4a9f95d96a98542758cece60f2b62b69bbf7d5318719dba051017d"
+    "hash": "a077222d77dfe082b8f1dd562ad70e458ac2ab76993a0b248ab0476e32e9e8dd"
    }
   }
  },
