其他不重要的更新

--- a/test.ipynb
+++ b/test.ipynb
@@ -96,6 +96,135 @@
     "a = pd.read_csv(\"C:\\\\Users\\\\user\\\\rams\\\\projcet\\\\upload_data\\\\hospice\\\\X_case_104to108_34.csv\")\n",
     "a.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Python - 淺複製(shallow copy)與深複製(deep copy)](https://ithelp.ithome.com.tw/articles/10221255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:  [1, 2, 3, 4]\n",
+      "a_ref:  [1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "a_ref = a\n",
+    "a.append(4)\n",
+    "print(\"a: \", a)\n",
+    "print(\"a_ref: \", a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shallow copy\n",
+      "a_list:  [1, 2, 3, 4]\n",
+      "a_index:  [1, 2, 3, 4]\n",
+      "a_copy:  [1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = list(a)\n",
+    "a_index = a[:]\n",
+    "a_copy = a.copy()\n",
+    "a.append(5)\n",
+    "print(\"Shallow copy\")\n",
+    "print(\"a_list: \", a_list)\n",
+    "print(\"a_index: \", a_index)\n",
+    "print(\"a_copy: \", a_copy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:             [1, [2, 3]]         id:2190286411392\n",
+      "a_shallow_copy:[1, [2, 3]]         id:2190286412160\n",
+      "a_deepcopy:    [1, [2, 3]]         id:2190266004864\n",
+      "\n",
+      "Change immutable part: a[0] = 4\n",
+      "a:             [4, [2, 3]]         id:2190286411392\n",
+      "a_shallow_copy:[1, [2, 3]]         id:2190286412160\n",
+      "a_deepcopy:    [1, [2, 3]]         id:2190266004864\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "a = [1, [2,3]]\n",
+    "a_ref = a\n",
+    "a_shallowcopy = copy.copy(a)\n",
+    "a_deepcopy = copy.deepcopy(a)\n",
+    "\n",
+    "print(\"{:<15}{:<20}{}\".format(\"a:\", f\"{a}\", f\"id:{id(a_ref)}\"))\n",
+    "print(\"{:<15}{:<20}{}\".format(\"a_shallow_copy:\", f\"{a_shallowcopy}\", f\"id:{id(a_shallowcopy)}\"))\n",
+    "print(\"{:<15}{:<20}{}\".format(\"a_deepcopy:\", f\"{a_deepcopy}\", f\"id:{id(a_deepcopy)}\"))\n",
+    "\n",
+    "a[0] = 4\n",
+    "print(\"\\nChange immutable part: a[0] = 4\")\n",
+    "print(\"{:<15}{:<20}{}\".format(\"a:\", f\"{a}\", f\"id:{id(a_ref)}\"))\n",
+    "print(\"{:<15}{:<20}{}\".format(\"a_shallow_copy:\", f\"{a_shallowcopy}\", f\"id:{id(a_shallowcopy)}\"))\n",
+    "print(\"{:<15}{:<20}{}\".format(\"a_deepcopy:\", f\"{a_deepcopy}\", f\"id:{id(a_deepcopy)}\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Change mutable part: a[1][1] = 5\n",
+      "a:                  [4, [2, 5]]         id:2190286411392\n",
+      "a_shallow_copy:     [1, [2, 5]]         id:2190286412160\n",
+      "a_deepcopy:         [1, [2, 3]]         id:2190266004864\n",
+      "\n",
+      "Check variable id at deep level\n",
+      "a[1][1]:            5                   id:2190183983536\n",
+      "a_shallowcopy[1][1]:5                   id:2190183983536\n",
+      "a_deepcopy[1][1]:   3                   id:2190183983472\n"
+     ]
+    }
+   ],
+   "source": [
+    "a[1][1] = 5\n",
+    "print(\"\\nChange mutable part: a[1][1] = 5\")\n",
+    "print(\"{:<20}{:<20}{}\".format(\"a:\", f\"{a}\", f\"id:{id(a_ref)}\"))\n",
+    "print(\"{:<20}{:<20}{}\".format(\"a_shallow_copy:\", f\"{a_shallowcopy}\", f\"id:{id(a_shallowcopy)}\"))\n",
+    "print(\"{:<20}{:<20}{}\".format(\"a_deepcopy:\", f\"{a_deepcopy}\", f\"id:{id(a_deepcopy)}\"))\n",
+    "\n",
+    "print(\"\\nCheck variable id at deep level\")\n",
+    "print(\"{:<20}{:<20}{}\".format(\"a[1][1]:\", f\"{a[1][1]}\", f\"id:{id(a[1][1])}\"))\n",
+    "print(\"{:<20}{:<20}{}\".format(\"a_shallowcopy[1][1]:\", f\"{a_shallowcopy[1][1]}\", f\"id:{id(a_shallowcopy[1][1])}\"))\n",
+    "print(\"{:<20}{:<20}{}\".format(\"a_deepcopy[1][1]:\", f\"{a_deepcopy[1][1]}\", f\"id:{id(a_deepcopy[1][1])}\"))"
+   ]
   }
  ],
  "metadata": {
