--- a/test.ipynb
+++ b/test.ipynb
@@ -225,11 +225,23 @@
     "print(\"{:<20}{:<20}{}\".format(\"a_shallowcopy[1][1]:\", f\"{a_shallowcopy[1][1]}\", f\"id:{id(a_shallowcopy[1][1])}\"))\n",
     "print(\"{:<20}{:<20}{}\".format(\"a_deepcopy[1][1]:\", f\"{a_deepcopy[1][1]}\", f\"id:{id(a_deepcopy[1][1])}\"))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test for multi class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.12 ('general')",
    "language": "python",
    "name": "python3"
   },
@@ -248,7 +260,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a077222d77dfe082b8f1dd562ad70e458ac2ab76993a0b248ab0476e32e9e8dd"
+    "hash": "143f2bea56bd7b43e07a082e680a4f90d13148133a4b83560eb0ede5c0956ddc"
    }
   }
  },
