--- a/test.ipynb
+++ b/test.ipynb
@@ -286,6 +286,17 @@
     "fn = \"A.B\"\n",
     "eval(fn)()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from subprocess import Popen\n",
+    "p = Popen(\"autoPush.bat\", cwd=r\"C:\\Users\\user\\rams\\projcet\")\n",
+    "stdout, stderr = p.communicate()"
+   ]
   }
  ],
  "metadata": {
