--- a/test.ipynb
+++ b/test.ipynb
@@ -289,10 +289,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# git add/commit/push automatically\n",
     "from subprocess import Popen\n",
     "p = Popen(\"autoPush.bat\", cwd=r\"C:\\Users\\user\\rams\\projcet\")\n",
     "stdout, stderr = p.communicate()"
