--- a/test.ipynb
+++ b/test.ipynb
@@ -321,6 +321,28 @@
     "[1,2,3]\n",
     "np.mean([1,2,3])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "df = pd.read_csv(\"model_deploying\\\\testing.csv\")\n",
+    "len(df)"
+   ]
   }
  ],
  "metadata": {
