--- a/test.ipynb
+++ b/test.ipynb
@@ -324,24 +324,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    hospice_custoNet_ASLFN_0.1_1.0_221022_182139.pkl\n",
+      "Name: modelName, dtype: string\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "# df = pd.read_csv(\"model_deploying\\\\testing.csv\")\n",
+    "deployRecord = pd.read_csv(f'model_deploying\\\\deployment.csv')\n",
+    "(deployRecord[\"containerID\"] == \"deploying\")\n",
+    "deployRecord.where((deployRecord[\"deployStatus\"] == \"revoking\"))[\"modelName\"]\n",
+    "modelPklFile = \"hospice_custoNet_ASLFN_0.1_1.0_221022_182139.pkl\"\n",
+    "dataDirectory = deployRecord.where((deployRecord[\"modelName\"] == modelPklFile))\n",
+    "dataDirectory_id = deployRecord.index[(deployRecord[\"modelName\"] == modelPklFile)]\n",
+    "a = str(dataDirectory.loc[dataDirectory_id, \"modelName\"])\n",
+    "print(dataDirectory.iloc[dataDirectory_id, 1].astype(\"string\"))\n",
+    "# dataDirectory[dataDirectory['trainedDataset'].isnull()]\n",
+    "# print(dataDirectory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "Int64Index([0, 1, 2, 3], dtype='int64')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd \n",
-    "df = pd.read_csv(\"model_deploying\\\\testing.csv\")\n",
-    "len(df)"
+    "deployRecord = pd.read_csv(f'model_deploying\\\\deployment.csv')\n",
+    "predictAPI = deployRecord.where((deployRecord[\"deployStatus\"] == \"revoking\"))[\"modelName\"]\n",
+    "# modelPklFile = \"hospice_custoNet_ASLFN_0.1_1.0_221022_182139.pkl\"\n",
+    "id = deployRecord.index[(deployRecord[\"modelName\"] == modelPklFile)]\n",
+    "deployRecord.loc[id, \"modelName\"].item()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['solar_custoNet_SLFN_0.6_0.729_221022_182027.pkl',\n",
+       " 'hospice_custoNet_ASLFN_0.1_1.0_221022_182139.pkl',\n",
+       " 'solar_custoNet_SLFN_0.6_0.887_221024_150202.pkl',\n",
+       " 'hospice_custoNet_ASLFN_0.6_1.0_221024_150236.pkl']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictAPI = deployRecord.where((deployRecord[\"deployStatus\"] == \"revoking\"))[\"modelName\"]\n",
+    "predictAPI.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hospice'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictAPI = \"hospice_custoNet_ASLFN_0.1_1.0_221022_182139.pkl\"\n",
+    "modelId = deployRecord.index[(deployRecord[\"modelName\"] == predictAPI)]\n",
+    "dataDirectory = deployRecord.loc[modelId, \"trainedDataset\"].item()\n",
+    "dataDirectory"
    ]
   }
  ],
