--- a/test.ipynb
+++ b/test.ipynb
@@ -422,6 +422,55 @@
     "dataDirectory = deployRecord.loc[modelId, \"trainedDataset\"].item()\n",
     "dataDirectory"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['solar_custoNet_SLFN_0.6_0.729_221022_182027.pkl', nan, nan, nan]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "deployRecord = pd.read_csv(f'model_deploying\\\\deployment.csv')\n",
+    "predictAPI = deployRecord.where((deployRecord[\"deployStatus\"] == \"deploying\"))[\"modelName\"].to_list()\n",
+    "predictAPI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['solar_custoNet_SLFN_0.6_0.729_221022_182027.pkl']"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "deployRecord = pd.read_csv(f'model_deploying\\\\deployment.csv')\n",
+    "predictAPI = deployRecord.index[(deployRecord[\"deployStatus\"] == \"deploying\")]\n",
+    "predictAPI\n",
+    "a = [modelName for (i, modelName) in deployRecord.loc[predictAPI, \"modelName\"].items()] \n",
+    "\n",
+    "a"
+   ]
   }
  ],
  "metadata": {
