新增 entry 頁面及 AI Developer Service & AI Software Service

--- a/test.ipynb
+++ b/test.ipynb
@@ -510,6 +510,71 @@
     "%%time\n",
     "import requests"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "probabilities do not sum to 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\user\\rams\\projcet\\test.ipynb Cell 25\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X33sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m fair_die2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, \u001b[39m7\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X33sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39m# Roll the unfair die\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X33sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m unfair_die \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mrandom\u001b[39m.\u001b[39;49mchoice([\u001b[39m1\u001b[39;49m, \u001b[39m2\u001b[39;49m, \u001b[39m3\u001b[39;49m, \u001b[39m4\u001b[39;49m, \u001b[39m5\u001b[39;49m, \u001b[39m6\u001b[39;49m], p\u001b[39m=\u001b[39;49munfair_die_probs)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X33sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m# Compute the minimum value rolled\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X33sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m min_value_rolled \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(fair_die1, fair_die2, unfair_die)\n",
+      "File \u001b[1;32mmtrand.pyx:939\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: probabilities do not sum to 1"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Set the number of simulations to run\n",
+    "num_sims = 10000\n",
+    "\n",
+    "# Set the probabilities for the unfair die\n",
+    "unfair_die_probs = [0.25, 0.20, 0.20, 0.20, 0.10, 0.05]\n",
+    "\n",
+    "# Set the number of rolls to simulate for each die\n",
+    "num_rolls = 10\n",
+    "\n",
+    "# Initialize an array to store the results of each simulation\n",
+    "results = np.zeros(num_sims)\n",
+    "\n",
+    "# Loop over the number of simulations\n",
+    "for sim in range(num_sims):\n",
+    "    # Initialize variables to store the minimum value and the number of rolls needed to reach that value\n",
+    "    min_value = 7\n",
+    "    num_rolls_to_min = 0\n",
+    "\n",
+    "    # Loop over the number of rolls for each die\n",
+    "    for roll in range(num_rolls):\n",
+    "        # Roll the two fair dice\n",
+    "        fair_die1 = np.random.randint(1, 7)\n",
+    "        fair_die2 = np.random.randint(1, 7)\n",
+    "\n",
+    "        # Roll the unfair die\n",
+    "        unfair_die = np.random.choice([1, 2, 3, 4, 5, 6], p=unfair_die_probs)\n",
+    "\n",
+    "        # Compute the minimum value rolled\n",
+    "        min_value_rolled = min(fair_die1, fair_die2, unfair_die)\n",
+    "\n",
+    "        # If the minimum value rolled is less than the current minimum value, update the minimum value and the number of rolls needed to reach that value\n",
+    "        if min_value_rolled < min_value:\n",
+    "            min_value = min_value_rolled\n",
+    "            num_rolls_to_min = roll + 1\n",
+    "\n",
+    "    # Store the number of rolls needed to reach the minimum value for this simulation\n",
+    "    results[sim] = num_rolls_to_min\n",
+    "\n",
+    "# Compute the average number of rolls needed to reach the minimum value\n",
+    "avg_num_rolls_to_min = np.mean(results)\n",
+    "\n",
+    "print(f\"The expected value of the smallest number of rolling the three dice is {avg_num_rolls_to_min:.2f}.\")"
+   ]
   }
  ],
  "metadata": {
