--- a/test.ipynb
+++ b/test.ipynb
@@ -513,67 +513,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "probabilities do not sum to 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\user\\rams\\projcet\\test.ipynb Cell 25\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X33sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m fair_die2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, \u001b[39m7\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X33sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39m# Roll the unfair die\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X33sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m unfair_die \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mrandom\u001b[39m.\u001b[39;49mchoice([\u001b[39m1\u001b[39;49m, \u001b[39m2\u001b[39;49m, \u001b[39m3\u001b[39;49m, \u001b[39m4\u001b[39;49m, \u001b[39m5\u001b[39;49m, \u001b[39m6\u001b[39;49m], p\u001b[39m=\u001b[39;49munfair_die_probs)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X33sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m# Compute the minimum value rolled\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X33sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m min_value_rolled \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(fair_die1, fair_die2, unfair_die)\n",
-      "File \u001b[1;32mmtrand.pyx:939\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: probabilities do not sum to 1"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\rams\\projcet\\apps\n"
      ]
     }
    ],
    "source": [
+    "%cd apps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import FastAPI, Request, Form\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from network.net import Network\n",
+    "from modelParameter import ModelParameter\n",
+    "\n",
+    "import uvicorn\n",
     "import numpy as np\n",
+    "import torch \n",
+    "import pickle\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import sys\n",
+    "import time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Path(\".\").glob('**/*')\n",
+    "modelPklFile = \"../ASLFN/docker_apps/solar_ASLFN_0.6_0.929_221219_151517.pt\"\n",
+    "# network = torch.load(modelPklFile)\n",
+    "network = torch.load(modelPklFile, map_location=torch.device(\"cpu\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dataDirectory': 'solar',\n",
+       " 'dataDescribing': 'ri_sro',\n",
+       " 'dataShape': {'X': (70, 12), 'Y': (70, 1)},\n",
+       " 'modelFile': 'ASLFN.py',\n",
+       " 'inputDimension': 12,\n",
+       " 'hiddenNode': 10,\n",
+       " 'outputDimension': 1,\n",
+       " 'weightInitialization': 'xavierNormal',\n",
+       " 'activationFunction': 'ReLU',\n",
+       " 'lossFunction': 'RMSE',\n",
+       " 'optimizer': 'Adam',\n",
+       " 'learningRate': 0.0007704439939703728,\n",
+       " 'betas': (0.9, 0.999),\n",
+       " 'eps': 1e-08,\n",
+       " 'weightDecay': 0.01,\n",
+       " 'initializingRule': 'LinearRegression',\n",
+       " 'initializingNumber': 10,\n",
+       " 'learningGoal': 0.6,\n",
+       " 'selectingRule': 'LTS',\n",
+       " 'matchingRule': 'EU_LG_UA',\n",
+       " 'matchingTimes': 10,\n",
+       " 'matchingLearningGoal': 0.6,\n",
+       " 'matchingLearningRateLowerBound': 0.1,\n",
+       " 'crammingRule': 'ri_sro',\n",
+       " 'reorganizingRule': 'ri_sro',\n",
+       " 'regularizingTimes': 10,\n",
+       " 'regularizingStrength': 0.001,\n",
+       " 'regularizingLearningGoal': 0.6,\n",
+       " 'regularizingLearningRateLowerBound': 0.001}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "network.linear1.weight.data\n",
+    "network.state_dict().values()\n",
+    "network.model_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('linear1.weight',\n",
+       "  tensor([[-0.0849,  0.8540,  0.0095, -0.0093,  0.0000, -0.4899,  0.0000, -0.0090,\n",
+       "            0.0093,  0.0090, -0.0090,  0.0090],\n",
+       "          [ 0.4963,  0.7682,  0.0885,  0.1320,  0.3074,  0.6341,  0.4901,  0.8964,\n",
+       "            0.4556,  0.6323,  0.3489,  0.4017],\n",
+       "          [ 0.4963,  0.7682,  0.0885,  0.1320,  0.3074,  0.6341,  0.4901,  0.8964,\n",
+       "            0.4556,  0.6323,  0.3489,  0.4017],\n",
+       "          [ 0.4963,  0.7682,  0.0885,  0.1320,  0.3074,  0.6341,  0.4901,  0.8964,\n",
+       "            0.4556,  0.6323,  0.3489,  0.4017],\n",
+       "          [ 0.4963,  0.7682,  0.0885,  0.1320,  0.3074,  0.6341,  0.4901,  0.8964,\n",
+       "            0.4556,  0.6323,  0.3489,  0.4017],\n",
+       "          [ 0.4963,  0.7682,  0.0885,  0.1320,  0.3074,  0.6341,  0.4901,  0.8964,\n",
+       "            0.4556,  0.6323,  0.3489,  0.4017],\n",
+       "          [ 0.4963,  0.7682,  0.0885,  0.1320,  0.3074,  0.6341,  0.4901,  0.8964,\n",
+       "            0.4556,  0.6323,  0.3489,  0.4017]])),\n",
+       " ('linear1.bias',\n",
+       "  tensor([ 1.5703,  1.1369,  1.1146,  1.0923, -1.1685, -1.1909, -1.2132])),\n",
+       " ('linear2.weight',\n",
+       "  tensor([[  0.9362, -31.4226,  62.8452, -31.4226,  47.2325, -94.4649,  47.2325]])),\n",
+       " ('linear2.bias', tensor([-1.3162]))]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(network.state_dict().items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def odct_tensor2list(network):\n",
     "\n",
-    "# Set the number of simulations to run\n",
-    "num_sims = 10000\n",
+    "    old_network = {}\n",
+    "    for dct in network.state_dict().items():\n",
+    "        key, value = dct\n",
+    "        old_network[key] = value.tolist()\n",
+    "    return old_network\n",
+    "    \n",
+    "old_network = odct_tensor2list(network)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "[Errno Expecting value] Internal Server Error: 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\lib\\site-packages\\requests\\models.py:910\u001b[0m, in \u001b[0;36mResponse.json\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m    909\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 910\u001b[0m     \u001b[39mreturn\u001b[39;00m complexjson\u001b[39m.\u001b[39mloads(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtext, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    911\u001b[0m \u001b[39mexcept\u001b[39;00m JSONDecodeError \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    912\u001b[0m     \u001b[39m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[0;32m    913\u001b[0m     \u001b[39m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\lib\\json\\__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[1;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[0;32m    343\u001b[0m \u001b[39mif\u001b[39;00m (\u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m object_hook \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m\n\u001b[0;32m    344\u001b[0m         parse_int \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m parse_float \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m\n\u001b[0;32m    345\u001b[0m         parse_constant \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m object_pairs_hook \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m kw):\n\u001b[1;32m--> 346\u001b[0m     \u001b[39mreturn\u001b[39;00m _default_decoder\u001b[39m.\u001b[39;49mdecode(s)\n\u001b[0;32m    347\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\lib\\json\\decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[1;34m(self, s, _w)\u001b[0m\n\u001b[0;32m    333\u001b[0m \u001b[39m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[0;32m    334\u001b[0m \u001b[39mcontaining a JSON document).\u001b[39;00m\n\u001b[0;32m    335\u001b[0m \n\u001b[0;32m    336\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m--> 337\u001b[0m obj, end \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mraw_decode(s, idx\u001b[39m=\u001b[39;49m_w(s, \u001b[39m0\u001b[39;49m)\u001b[39m.\u001b[39;49mend())\n\u001b[0;32m    338\u001b[0m end \u001b[39m=\u001b[39m _w(s, end)\u001b[39m.\u001b[39mend()\n",
+      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\lib\\json\\decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[1;34m(self, s, idx)\u001b[0m\n\u001b[0;32m    354\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m--> 355\u001b[0m     \u001b[39mraise\u001b[39;00m JSONDecodeError(\u001b[39m\"\u001b[39m\u001b[39mExpecting value\u001b[39m\u001b[39m\"\u001b[39m, s, err\u001b[39m.\u001b[39mvalue) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m    356\u001b[0m \u001b[39mreturn\u001b[39;00m obj, end\n",
+      "\u001b[1;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\user\\rams\\projcet\\test.ipynb Cell 32\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X41sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X41sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m res \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mpost(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mhttp://127.0.0.1:8005/train\u001b[39m\u001b[39m\"\u001b[39m, json\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mnetwork\u001b[39m\u001b[39m\"\u001b[39m: old_network, \u001b[39m\"\u001b[39m\u001b[39mmodel_params\u001b[39m\u001b[39m\"\u001b[39m : network\u001b[39m.\u001b[39mmodel_params})\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/test.ipynb#X41sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m res\u001b[39m.\u001b[39;49mjson()\n",
+      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\lib\\site-packages\\requests\\models.py:917\u001b[0m, in \u001b[0;36mResponse.json\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m    915\u001b[0m     \u001b[39mraise\u001b[39;00m RequestsJSONDecodeError(e\u001b[39m.\u001b[39mmessage)\n\u001b[0;32m    916\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 917\u001b[0m     \u001b[39mraise\u001b[39;00m RequestsJSONDecodeError(e\u001b[39m.\u001b[39mmsg, e\u001b[39m.\u001b[39mdoc, e\u001b[39m.\u001b[39mpos)\n",
+      "\u001b[1;31mJSONDecodeError\u001b[0m: [Errno Expecting value] Internal Server Error: 0"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
     "\n",
-    "# Set the probabilities for the unfair die\n",
-    "unfair_die_probs = [0.25, 0.20, 0.20, 0.20, 0.10, 0.05]\n",
-    "\n",
-    "# Set the number of rolls to simulate for each die\n",
-    "num_rolls = 10\n",
-    "\n",
-    "# Initialize an array to store the results of each simulation\n",
-    "results = np.zeros(num_sims)\n",
-    "\n",
-    "# Loop over the number of simulations\n",
-    "for sim in range(num_sims):\n",
-    "    # Initialize variables to store the minimum value and the number of rolls needed to reach that value\n",
-    "    min_value = 7\n",
-    "    num_rolls_to_min = 0\n",
-    "\n",
-    "    # Loop over the number of rolls for each die\n",
-    "    for roll in range(num_rolls):\n",
-    "        # Roll the two fair dice\n",
-    "        fair_die1 = np.random.randint(1, 7)\n",
-    "        fair_die2 = np.random.randint(1, 7)\n",
-    "\n",
-    "        # Roll the unfair die\n",
-    "        unfair_die = np.random.choice([1, 2, 3, 4, 5, 6], p=unfair_die_probs)\n",
-    "\n",
-    "        # Compute the minimum value rolled\n",
-    "        min_value_rolled = min(fair_die1, fair_die2, unfair_die)\n",
-    "\n",
-    "        # If the minimum value rolled is less than the current minimum value, update the minimum value and the number of rolls needed to reach that value\n",
-    "        if min_value_rolled < min_value:\n",
-    "            min_value = min_value_rolled\n",
-    "            num_rolls_to_min = roll + 1\n",
-    "\n",
-    "    # Store the number of rolls needed to reach the minimum value for this simulation\n",
-    "    results[sim] = num_rolls_to_min\n",
-    "\n",
-    "# Compute the average number of rolls needed to reach the minimum value\n",
-    "avg_num_rolls_to_min = np.mean(results)\n",
-    "\n",
-    "print(f\"The expected value of the smallest number of rolling the three dice is {avg_num_rolls_to_min:.2f}.\")"
+    "res = requests.post(f\"http://127.0.0.1:8005/train\", json={\"network\": old_network, \"model_params\" : network.model_params})\n",
+    "res.json()"
    ]
   }
  ],
