--- a/test.ipynb
+++ b/test.ipynb
@@ -2,6 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.06285954  0.43529037 -0.12911126 -0.13207012  0.18351917 -0.13296643\n",
+      "   0.93489903]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "from torchvision import transforms\n",
+    "\n",
+    "a = np.array([[0.06285954, 0.43529037, -0.12911126, -0.13207012, 0.18351917, -0.13296643, 0.93489903]])\n",
+    "a.resize((6, 7), refcheck=False)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -760,7 +794,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -774,12 +808,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a077222d77dfe082b8f1dd562ad70e458ac2ab76993a0b248ab0476e32e9e8dd"
+    "hash": "14958d3aee5f1cad06795f787e54b96185c25fb40dfec723a5be941f3a531b8c"
    }
   }
  },
