--- a/test.ipynb
+++ b/test.ipynb
@@ -2,6 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\ASUS\\\\Desktop\\\\NCCU\\\\Thesis\\\\first-try'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'module_name': ['reorganizing-ramsay', 'reorganizing-ramsay', 'reorganizing-ramsay']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "modules_dict = {\"module_name\":[]}\n",
+    "with open(f\"apps\\\\module_kind_OnDockerTmp\", \"r\", encoding=\"utf-8\") as file:\n",
+    "    for line in file.readlines():\n",
+    "        dockerTmp = line\n",
+    "        dockerTmp = dockerTmp.replace(\"\\n\", \"\").split(\"   \")\n",
+    "        module_name = dockerTmp[-1].lstrip(\" \")\n",
+    "        modules_dict[\"module_name\"].append(module_name)\n",
+    "\n",
+    "print(modules_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d3a187c800b2', 'modules:v1', '', '', '', '', '', '', '', '', ' \"python3 /app/app.py\"', ' 36 minutes ago', 'Up 36 minutes', '0.0.0.0:8008->8005/tcp', '  reorganizing_ramsay']\n",
+      "0.0.0.0:8008->8005/tcp\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(f\"apps\\\\module_name_OnDockerTmp\", \"r\", encoding=\"utf-8\") as file:\n",
+    "    dockerTmp = file.read()\n",
+    "    dockerTmp = dockerTmp.replace(\"\\n\", \"\").split(\"   \")\n",
+    "    print(dockerTmp)\n",
+    "    print(dockerTmp[-2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "module_name = None\n",
+    "module_kind = 2\n",
+    "assert module_name == None or module_kind == None, \"輸入參數請擇一，輸入 module_name 尋找一特定 module；輸入 module_kind 尋找多數類似 module。\"\n",
+    "assert not (module_name == None and module_kind == None), \"輸入參數請擇一，輸入 module_name 尋找一特定 module；輸入 module_kind 尋找多數類似 module。\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
@@ -808,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (tags/v3.9.12:b28265d, Mar 23 2022, 23:52:46) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
