--- a/test.ipynb
+++ b/test.ipynb
@@ -22,6 +22,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "developer_example\\matching-ramsay\\apps\\app.py\n",
+      "developer_example\\matching-ramsay\\apps\\getFreerGpu.py\n",
+      "developer_example\\matching-ramsay\\apps\\gpuMemoryTmp\n",
+      "developer_example\\matching-ramsay\\apps\\modelParameter.py\n",
+      "developer_example\\matching-ramsay\\apps\\modules_s2.py\n",
+      "developer_example\\matching-ramsay\\apps\\net.py\n",
+      "developer_example\\matching-ramsay\\apps\\__pycache__\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['developer_example\\\\matching-ramsay\\\\apps',\n",
+       " 'developer_example\\\\matching-ramsay\\\\requirements.txt',\n",
+       " 'developer_example\\\\matching-ramsay\\\\rootuser.Dockerfile',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\app.py',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\getFreerGpu.py',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\gpuMemoryTmp',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\modelParameter.py',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\modules_s2.py',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\net.py',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\__pycache__',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\__pycache__\\\\app.cpython-39.pyc',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\__pycache__\\\\getFreerGpu.cpython-39.pyc',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\__pycache__\\\\modelParameter.cpython-39.pyc',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\__pycache__\\\\modules_s2.cpython-39.pyc',\n",
+       " 'developer_example\\\\matching-ramsay\\\\apps\\\\__pycache__\\\\net.cpython-39.pyc']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "path = Path(\"developer_example\\\\matching-ramsay\")\n",
+    "for file in path.glob(\"*/*\"):\n",
+    "    print(file)\n",
+    "\n",
+    "file_list = [str(file) for file in path.glob(\"**/*\")]\n",
+    "file_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'matching 1244 cramming 567 reing'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [\"matching\", \"1244\"]\n",
+    "b = [\"cramming\", \"567\"]\n",
+    "c = [\"reing\"]\n",
+    "\" \".join(a) + \" \".join(b) + \" \".join(c) \n",
+    "f\"{' '.join(a)} {' '.join(b)} {' '.join(c)}\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -887,7 +965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (tags/v3.9.12:b28265d, Mar 23 2022, 23:52:46) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
