--- a/inheritance.ipynb
+++ b/inheritance.ipynb
@@ -109,6 +109,118 @@
     "riro = RIRO(1, np.array([1,2,3]), np.array([1,2,3]))\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torchensemble import VotingRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1 = nn.Sequential(\n",
+    "    nn.Linear(10, 5),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(5, 1),\n",
+    "    nn.Sigmoid()\n",
+    ")\n",
+    "\n",
+    "model2 = nn.Sequential(\n",
+    "    nn.Linear(10, 10),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(10, 1),\n",
+    "    nn.Sigmoid()\n",
+    ")\n",
+    "\n",
+    "model3 = nn.Sequential(\n",
+    "    nn.Linear(10, 20),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(20, 1),\n",
+    "    nn.Sigmoid()\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'models'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\user\\rams\\projcet\\inheritance.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ensemble_model \u001b[39m=\u001b[39m VotingClassifier(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     models\u001b[39m=\u001b[39;49m[model1, model2, model3],\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     cuda_device\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m,  \u001b[39m# Use GPU if available\u001b[39;49;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     n_classes\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     ensemble_size\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     criterion\u001b[39m=\u001b[39;49mnn\u001b[39m.\u001b[39;49mBCELoss(),\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     optimizer\u001b[39m=\u001b[39;49mtorch\u001b[39m.\u001b[39;49moptim\u001b[39m.\u001b[39;49mAdam,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     optimizer_params\u001b[39m=\u001b[39;49m{\u001b[39m\"\u001b[39;49m\u001b[39mlr\u001b[39;49m\u001b[39m\"\u001b[39;49m: \u001b[39m0.001\u001b[39;49m},\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     epochs\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     batch_size\u001b[39m=\u001b[39;49m\u001b[39m32\u001b[39;49m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     validation_split\u001b[39m=\u001b[39;49m\u001b[39m0.2\u001b[39;49m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m )\n",
+      "\u001b[1;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'models'"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an instance of the VotingRegressor\n",
+    "ensemble_model = VotingRegressor(estimators=[model1, model2, model3])\n",
+    "\n",
+    "# Train the ensemble model\n",
+    "ensemble_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate the ensemble model\n",
+    "y_pred = ensemble_model.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "dataDirectory = \"solar\"\n",
+    "filelist = os.listdir(f\"./upload_data/{dataDirectory}/Train\")\n",
+    "file_x, file_y = sorted(filelist) # ordered by prefix: X_, Y_\n",
+    "filePath_X, filePath_Y = f\"./upload_data/{dataDirectory}/Train/{file_x}\", f\"./upload_data/{dataDirectory}/Train/{file_y}\"\n",
+    "df_X, df_Y = pd.read_csv(filePath_X), pd.read_csv(filePath_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_X)\n"
+   ]
   }
  ],
  "metadata": {
