--- a/developer_example/hw1.ipynb
+++ b/developer_example/hw1.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example\n",
+    "Example setting for hyperparameters\n",
     "\n",
     "dataDirectory = \"solar\"\n",
     "\n",
@@ -52,6 +52,14 @@
     "optimizer = \"\"                  # \"Adam\", \"gradientDescent\", \"Momentum\"\n",
     "learningRateDecayScheduler = \"\" # \"None\", \"Cosine\"\n",
     "studentId = \"\"                  # Your student ID, e.g., \"110356021\"\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "POST a request to train a Hw1 model"
    ]
   },
   {
